// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`line height 1`] = `"1.25rem"`;

exports[`line height 2`] = `"1.25rem"`;

exports[`line height 3`] = `"1.5rem"`;

exports[`line height 4`] = `"1.25rem"`;

exports[`line height 5`] = `"2.5rem"`;

exports[`scale (custom) 1`] = `"2.0225rem"`;

exports[`scale (custom) 2`] = `"3.27241rem"`;

exports[`scale (custom) 3`] = `"5.29475rem"`;

exports[`scale (custom) 4`] = `"1.25rem"`;

exports[`scale (custom) 5`] = `"0.77256rem"`;

exports[`scale 1`] = `"1.333rem"`;

exports[`scale 2`] = `"1.77689rem"`;

exports[`scale 3`] = `"2.36859rem"`;

exports[`scale 4`] = `"1rem"`;

exports[`scale 5`] = `"0.75019rem"`;

exports[`typography 1`] = `
Object {
  "fontSize": "1rem",
  "lineHeight": "1.25rem",
}
`;

exports[`typography 2`] = `
Object {
  "fontSize": "1.618rem",
  "lineHeight": "2.5rem",
}
`;

exports[`typography 3`] = `
Object {
  "fontSize": "2.61792rem",
  "lineHeight": "3.75rem",
}
`;

exports[`typography 4`] = `
Object {
  "fontSize": "0.61805rem",
  "lineHeight": "1.25rem",
}
`;
